{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 230,
  "lineage": "c5051762-32ca-0436-1901-ee982affe8a9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app-instance",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins-instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-844e0bf7",
            "arn": "arn:aws:ec2:eu-west-1:745588637801:instance/i-0a133fe9f00a86a39",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0a133fe9f00a86a39",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykeypair",
            "monitoring": false,
            "primary_network_interface_id": "eni-03155e450e5426efe",
            "private_dns": "ip-10-0-1-6.eu-west-1.compute.internal",
            "private_ip": "10.0.1.6",
            "public_dns": "ec2-34-255-100-41.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.255.100.41",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-05360e8165a0f37b9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f754213ccc700a92",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d17fb0ff7b1136ec"
            ]
          },
          "dependencies": [
            "aws_key_pair.mykeypair",
            "aws_security_group.jenkins-securitygroup",
            "aws_subnet.main-public-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-02ca989d72a89ccb4",
            "owner_id": "745588637801",
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-08c1522e838e42fe8"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c5fe521a032c645c",
            "owner_id": "745588637801",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02ca989d72a89ccb4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-public-1"
            },
            "vpc_id": "vpc-08c1522e838e42fe8"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-1-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ac566ce4bd9818c2",
            "route_table_id": "rtb-0c5fe521a032c645c",
            "subnet_id": "subnet-0f754213ccc700a92"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.main-public",
            "aws_subnet.main-public-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-2-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00d243f10af045992",
            "route_table_id": "rtb-0c5fe521a032c645c",
            "subnet_id": "subnet-0994f3af3e6c1b26d"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.main-public",
            "aws_subnet.main-public-2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-3-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f934bba7258be1a",
            "route_table_id": "rtb-0c5fe521a032c645c",
            "subnet_id": "subnet-0acf5fb059d334181"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.main-public",
            "aws_subnet.main-public-3",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app-securitygroup",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:745588637801:security-group/sg-00e6522a334b65bbc",
            "description": "security group that allows ssh and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00e6522a334b65bbc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "app-securitygroup",
            "name_prefix": null,
            "owner_id": "745588637801",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app-securitygroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-08c1522e838e42fe8"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins-securitygroup",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:745588637801:security-group/sg-0d17fb0ff7b1136ec",
            "description": "security group that allows ssh and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d17fb0ff7b1136ec",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "jenkins-securitygroup",
            "name_prefix": null,
            "owner_id": "745588637801",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jenkins-securitygroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-08c1522e838e42fe8"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:745588637801:subnet/subnet-002053c973439108f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-002053c973439108f",
            "map_public_ip_on_launch": false,
            "owner_id": "745588637801",
            "tags": {
              "Name": "main-private-1"
            },
            "vpc_id": "vpc-08c1522e838e42fe8"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:745588637801:subnet/subnet-05dd8356c91ad040c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-05dd8356c91ad040c",
            "map_public_ip_on_launch": false,
            "owner_id": "745588637801",
            "tags": {
              "Name": "main-private-2"
            },
            "vpc_id": "vpc-08c1522e838e42fe8"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:745588637801:subnet/subnet-09ab7dc3190097200",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-09ab7dc3190097200",
            "map_public_ip_on_launch": false,
            "owner_id": "745588637801",
            "tags": {
              "Name": "main-private-3"
            },
            "vpc_id": "vpc-08c1522e838e42fe8"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:745588637801:subnet/subnet-0f754213ccc700a92",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0f754213ccc700a92",
            "map_public_ip_on_launch": true,
            "owner_id": "745588637801",
            "tags": {
              "Name": "main-public-1"
            },
            "vpc_id": "vpc-08c1522e838e42fe8"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:745588637801:subnet/subnet-0994f3af3e6c1b26d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0994f3af3e6c1b26d",
            "map_public_ip_on_launch": true,
            "owner_id": "745588637801",
            "tags": {
              "Name": "main-public-2"
            },
            "vpc_id": "vpc-08c1522e838e42fe8"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:745588637801:subnet/subnet-0acf5fb059d334181",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0acf5fb059d334181",
            "map_public_ip_on_launch": true,
            "owner_id": "745588637801",
            "tags": {
              "Name": "main-public-3"
            },
            "vpc_id": "vpc-08c1522e838e42fe8"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:745588637801:vpc/vpc-08c1522e838e42fe8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0562993849a2582af",
            "default_route_table_id": "rtb-0e601a72fcde50751",
            "default_security_group_id": "sg-08f0985eb91ecb4fd",
            "dhcp_options_id": "dopt-98732ffe",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-08c1522e838e42fe8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e601a72fcde50751",
            "owner_id": "745588637801",
            "tags": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}